--- a/app/views/activities/edit.html.haml
+++ b/app/views/activities/edit.html.haml
@@ -1,5 +1,8 @@
 %h1 Activity Type Add/Edit
-
 = render 'field'
+%div#management
+  %ul
+    %li.active= link_to 'Back', activities_path 
 
-= link_to 'Back', activities_path 
+
+
