--- a/app/views/projects/new.html.haml
+++ b/app/views/projects/new.html.haml
@@ -1,3 +1,6 @@
 %h1 Project Add/Edit
 = render 'field', :handlers => [:haml]
-= link_to 'Back', projects_path 
+%div#management
+  %ul
+    %li.active= link_to 'Back', projects_path 
+
