--- a/app/views/client_lists/edit.html.haml
+++ b/app/views/client_lists/edit.html.haml
@@ -1,5 +1,6 @@
 %h1 Client Add/Edit
-
 = render 'field', :handlers => [:haml] 
+%div#management
+  %ul
+    %li.active= link_to 'Back', client_lists_path 
 
-= link_to 'Back', client_lists_path 
