--- a/app/views/client_lists/index.html.haml
+++ b/app/views/client_lists/index.html.haml
@@ -7,10 +7,11 @@
       %th Code
       %th Actions
     = render :partial => @client_lists , :handlers => [:haml]
-%br/
-= link_to 'New Client', new_client_list_path 
-%br/
-= link_to 'Back', home_index_path 
+  %br/
+  %div#management
+    %ul
+      %li.active= link_to 'New Client', new_client_list_path 
+      %li.active= link_to 'Back', home_index_path 
 
 
 
