--- a/app/views/client_lists/new.html.haml
+++ b/app/views/client_lists/new.html.haml
@@ -1,3 +1,6 @@
 %h1 Client Add/Edit
 = render 'field', :handlers => [:haml]
-= link_to 'Back', client_lists_path 
+%div#management
+  %ul
+    %li.active= link_to 'Back', client_lists_path 
+
