--- a/app/views/client_lists/show.html.erb
+++ b/app/views/client_lists/show.html.erb
@@ -20,12 +20,13 @@
 </table>
 </div>
 <br/>
-
-
-<%= link_to 'Edit', edit_client_list_path %>
-<% unless @client_list.projects.present? %><%= link_to 'Delete',@client_list_id, confirm: 'Are you sure', method: :delete %>
-<% end %>
-<%= link_to 'Back', client_lists_path %> 
+<div id="management">
+  <ul>
+    <li class = "active"><%= link_to 'Edit', edit_client_list_path %></li>
+  <% unless @client_list.projects.present? %>
+    <li class = "active"><%= link_to 'Delete',@client_list_id, confirm: 'Are you sure', method: :delete %></li>
+  <% end %>
+  <li class="active"><%= link_to 'Back', client_lists_path %></li></ul></div> 
 
 
 
