--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -3,11 +3,11 @@
 <% end %>
 
 <% if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+  <p>New User?<%=  link_to "Sign up", new_registration_path(resource_name) %></p>
 <% end %>
 
 <% if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot your password?", forgot_password_path %><br />
+  <p>Forget your Password?<%= link_to "click here to reset", forgot_password_path %></p><br />
 <% end %>
 
 <% if devise_mapping.confirmable? && controller_name != 'confirmations' %>
