--- a/app/views/employees/_employee.html.haml
+++ b/app/views/employees/_employee.html.haml
@@ -8,5 +8,5 @@
   %td.list_actions
     = link_to 'show', employee_path(employee) 
     = link_to 'Edit', edit_employee_path(employee) 
-    = link_to 'Delete', employee, confirm: 'Are you Sure', method: :delete
-    = link_to 'Send mail', send_mail_path(employee)
+    = link_to 'Delete', employee, confirm: 'Are you Sure', method: :delete, :remote=> 'true', :class=> 'delete_employee'
+    = link_to 'Send mail', create_mail_path(employee)
