--- a/app/views/employees/new.html.haml
+++ b/app/views/employees/new.html.haml
@@ -1,4 +1,8 @@
 %h1 New Employee 
 = render 'field' , :handlers => [:haml]
-= link_to 'Back', employees_path 
+%div#management
+  %ul
+    %li.active= link_to 'Back', employees_path 
+
+
 
