--- a/app/assets/stylesheets/client_lists.css.scss
+++ b/app/assets/stylesheets/client_lists.css.scss
@@ -89,7 +89,7 @@ h1 {
 }
 #management ul {
   zoom: 1;
-  background: #a7bc7a url(images/pattern.png) top left repeat;
+  background: #a7bc7a ;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -126,7 +126,7 @@ h1 {
   border-right: 1px solid #b2c58b;
 }
 #management li:hover {
-  background: #9cb369 url(images/pattern.png) top left repeat;
+  background: #9cb369;
 }
 #management li:first-child {
   border-left: none;
