--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -22,7 +22,7 @@
 }
 #management ul {
   zoom: 1;
-  background: #a7bc7a url(images/pattern.png) top left repeat;
+  background: #a7bc7a ;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -52,7 +52,7 @@
   border-right: 1px solid #b2c58b;
 }
 #management li:hover {
-  background: #9cb369 url(images/pattern.png) top left repeat;
+  background: #9cb369;
 }
 
 #management li:first-child {
