--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,14 +1,13 @@
-
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
+<div id ="password_reset">
+<h3>Edit <%= resource_name.to_s.humanize %></h3>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-<table>  
-  <tr>
+<table id ="reset_table">  
+  <tr id="fields">
     <td><%= f.label :username %></td>
     <td><%= f.text_field :username %></td>
     <td class ="error"><%= devise_error_messages(:username) %></td>
   </tr>
-  <tr>
+  <tr id="fields">
     <td><%= f.label :email %></td>
     <td><%= f.email_field :email, autofocus: true %></td>
     <td class ="error"><%= devise_error_messages(:email) %></td>
@@ -18,19 +17,19 @@
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <tr>
+  <tr id ="fields">
     <td><%= f.label :password %></td>
     <td><%= f.password_field :password, autocomplete: "off" %></td>
     <td class ="error"><%= devise_error_messages(:password) %></td>
   </tr>
 
-  <tr>
+  <tr id="fields">
     <td><%= f.label :password_confirmation %></td>
     <td><%= f.password_field :password_confirmation, autocomplete: "off" %></td>
     <td class ="error"><%= devise_error_messages(:password_confirmation) %></td>
   </tr>
 
-  <tr>
+  <tr id="fields">
     <td><%= f.label :current_password %></td>
     <td><%= f.password_field :current_password, autocomplete: "off" %></td>
     <td class="error"><%= devise_error_messages(:current_password) %></td>
@@ -40,9 +39,10 @@
 <div><%= f.submit "Update" %></div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<h4>Cancel my account</h4>
 
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
+</div>
 
